unpackaged/main/default/objects/pse__VersionItem_Risk__c/pse__VersionItem_Risk__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__VersionHelp</customHelpPage>
    <description>A capture of a project risk taken at the time the version is created.</description>
    <label>Version Item Risk</label>
    <nameField>
        <displayFormat>PVR-{0000}</displayFormat>
        <label>Version Item Risk Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Version Item Risks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>