unpackaged/main/default/objects/pse__VersionItem_Risk__c/fields/pse__AccountId__c.field-meta.xml
<CustomField>
    <fullName>pse__AccountId__c</fullName>
    <description>The Id for the account relating to the risk referenced in the project version.</description>
    <inlineHelpText>TThe Id for the account relating to the risk referenced in the project version.</inlineHelpText>
    <label>Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>