unpackaged/main/default/objects/pse__VersionItem_Risk__c/fields/pse__Closed__c.field-meta.xml
<CustomField>
    <fullName>pse__Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The closed status of the risk referenced in the project version.</description>
    <inlineHelpText>The closed status of the risk referenced in the project version.</inlineHelpText>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>