unpackaged/main/default/objects/pse__VersionItem_Risk__c/fields/pse__Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Closed_Date__c</fullName>
    <description>The date on which the risk referenced in the project version was closed.</description>
    <inlineHelpText>The date on which the risk referenced in the project version was closed.</inlineHelpText>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>