unpackaged/main/default/objects/pse__VersionItem_Risk__c/fields/pse__Contingency__c.field-meta.xml
<CustomField>
    <fullName>pse__Contingency__c</fullName>
    <description>A description of the plan of contingency for the risk referenced in the project version.</description>
    <inlineHelpText>A description of the plan of contingency  for the risk referenced in the project version.</inlineHelpText>
    <label>Contingency</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>