unpackaged/main/default/objects/pse__VersionItem_Risk__c/fields/pse__Date_Raised__c.field-meta.xml
<CustomField>
    <fullName>pse__Date_Raised__c</fullName>
    <description>The date on which the risk referenced in the project version was raised.</description>
    <inlineHelpText>The date on which the risk referenced in the project version was raised.</inlineHelpText>
    <label>Date Raised</label>
    <type>Date</type>
</CustomField>