unpackaged/main/default/objects/pse__VersionItem_Risk__c/fields/pse__Issue_Id__c.field-meta.xml
<CustomField>
    <fullName>pse__Issue_Id__c</fullName>
    <description>The Id of the issue associated with the risk referenced in the project version.</description>
    <inlineHelpText>The Id of the issue associated with the risk referenced in the project version.</inlineHelpText>
    <label>Issue Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>