unpackaged/main/default/objects/pse__VersionItem_Risk__c/fields/pse__Likelihood__c.field-meta.xml
<CustomField>
    <fullName>pse__Likelihood__c</fullName>
    <description>Likelihood of the risk referenced in the project version occurring.</description>
    <inlineHelpText>Likelihood of the risk referenced in the project version occurring.</inlineHelpText>
    <label>Likelihood</label>
    <length>200</length>
    <type>Text</type>
</CustomField>