unpackaged/main/default/objects/pse__VersionItem_Risk__c/fields/pse__MilestoneName__c.field-meta.xml
<CustomField>
    <fullName>pse__MilestoneName__c</fullName>
    <description>The name of the milestone relating to the risk referenced in the project version.</description>
    <inlineHelpText>The name of the milestone relating to the risk referenced in the project version.</inlineHelpText>
    <label>Milestone Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>