unpackaged/main/default/objects/pse__VersionItem_Risk__c/fields/pse__Mitigation_Plan__c.field-meta.xml
<CustomField>
    <fullName>pse__Mitigation_Plan__c</fullName>
    <description>A description for the plan of mitigation taken against the risk referenced in the project version.</description>
    <inlineHelpText>A description for the plan of mitigation taken against the risk referenced in the project version.</inlineHelpText>
    <label>Mitigation Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>