unpackaged/main/default/objects/pse__VersionItem_Risk__c/fields/pse__OriginalId__c.field-meta.xml
<CustomField>
    <fullName>pse__OriginalId__c</fullName>
    <description>The original Id of the risk referenced in the project version.</description>
    <inlineHelpText>The original Id of the risk referenced in the project version.</inlineHelpText>
    <label>Original Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>