unpackaged/main/default/objects/pse__VersionItem_Risk__c/fields/pse__ProjectTaskName__c.field-meta.xml
<CustomField>
    <fullName>pse__ProjectTaskName__c</fullName>
    <description>The name of the project task relating to the risk referenced in the project version.</description>
    <inlineHelpText>The name of the project task relating to the risk referenced in the project version.</inlineHelpText>
    <label>Project Task Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>