unpackaged/main/default/objects/pse__VersionItem_Risk__c/fields/pse__Risk_Name__c.field-meta.xml
<CustomField>
    <fullName>pse__Risk_Name__c</fullName>
    <description>The name of the risk referenced in the project version.</description>
    <inlineHelpText>The name of the risk referenced in the project version.</inlineHelpText>
    <label>Risk Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>