unpackaged/main/default/objects/pse__VersionItem_Risk__c/fields/pse__Risk_Number__c.field-meta.xml
<CustomField>
    <fullName>pse__Risk_Number__c</fullName>
    <description>A unique auto-generated reference for the risk referenced in the project version.</description>
    <inlineHelpText>A unique auto-generated reference for the risk referenced in the project version.</inlineHelpText>
    <label>Risk Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>