unpackaged/main/default/objects/pse__VersionItem_Risk__c/fields/pse__RiskOwnerName__c.field-meta.xml
<CustomField>
    <fullName>pse__RiskOwnerName__c</fullName>
    <description>The name of the resource assigned as the owner of the risk referenced in the project version.</description>
    <inlineHelpText>The name of the resource assigned as the owner of the risk referenced in the project version.</inlineHelpText>
    <label>Risk Owner Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>