unpackaged/main/default/objects/pse__VersionItem_Risk__c/fields/pse__Severity__c.field-meta.xml
<CustomField>
    <fullName>pse__Severity__c</fullName>
    <description>The severity of the risk referenced in the project version originally calculated by multiplying the Impact value by the Likelihood value.</description>
    <inlineHelpText>The severity of the risk referenced in the project version originally calculated by multiplying the Impact value by the Likelihood value.</inlineHelpText>
    <label>Severity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>