unpackaged/main/default/objects/pse__VersionItem_Risk__c/fields/pse__Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Status__c</fullName>
    <description>The status of the risk referenced in the project version.</description>
    <inlineHelpText>The status of the risk referenced in the project version.</inlineHelpText>
    <label>Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>